# sdk-nrf

./: west.yml
applications/machine_learning/: CMakeLists.txt
applications/matter_bridge/: CMakeLists.txt  Kconfig  README.rst  prj.conf
applications/matter_bridge/src/: app_task.cpp  app_task.h  bridge.matter  bridge.zap  bridge_shell.cpp  bridged_device_factory.h  bridged_devices_creator.cpp  bridged_devices_creator.h
applications/matter_weather_station/: CMakeLists.txt  Kconfig
applications/matter_weather_station/src/: app_event.h  app_task.cpp
applications/matter_window_controller/: CMakeLists.txt  prj.conf
applications/matter_window_controller/src/: app_task.cpp  app_task.h
boards/shields/nrf7002ek_nrf7002_eb/: Kconfig.shield  nrf7002ek_nrf7002_eb.overlay  nrf7002ek_nrf7002_eb_coex.overlay
doc/nrf/: gs_installing.rst  links.txt  samples.rst  shortcuts.txt  ug_chip.rst  ug_matter_configuring_env.rst
doc/nrf/images/: matter_nrfconnect_overview_simplified_ncs.vsdx
doc/nrf/releases/: release-notes-latest.rst
include/bluetooth/services/: lbs.h
lib/edge_impulse/: Kconfig
modules/mcuboot/: CMakeLists.txt
samples/connectedhomeip/: .clang-format
samples/connectedhomeip/light_bulb/: CMakeLists.txt  README.rst  light_switch_test.overlay  nrf52840dk_nrf52840.overlay  prj.conf
samples/connectedhomeip/light_switch/: CMakeLists.txt  README.rst  prj.conf
samples/connectedhomeip/light_switch/src/: app_event.h  app_task.cpp  app_task.h  light_switch.cpp  light_switch.h  main.cpp
samples/connectedhomeip/lock/: CMakeLists.txt  README.rst  overlay-dfu_support.conf  prj.conf
samples/matter/bridge/: CMakeLists.txt  Kconfig  prj_release.conf  sample.yaml
samples/matter/light_bulb/: CMakeLists.txt  Kconfig  README.rst  prj_release.conf
samples/matter/light_switch/: CMakeLists.txt  Kconfig  README.rst  prj.conf  (+1 more)
scripts/: quarantine_zephyr.yaml
subsys/trusted_storage/: Kconfig
(+266 files in other folders)
